fix(scrollbars): do not apply css scrollbars

--- a/ionic/components/app/scrollbars.scss
+++ b/ionic/components/app/scrollbars.scss
@@ -4,24 +4,26 @@
 // Styling for dekstop webkit browsers
 // These do not apply for mobile browsers
 
-::-webkit-scrollbar {
-  width: 9px;
-}
+.css-scrollbars {
 
-::-webkit-scrollbar-thumb:vertical,
-::-webkit-scrollbar-thumb:horizontal {
-  background: rgba(0, 0, 0, 0.4);
-  border: 2px solid transparent;
-  border-radius: 20px;
-  background-clip: padding-box;
-  min-height: 10px;
-}
+  ::-webkit-scrollbar {
+    width: 9px;
+  }
 
-::-webkit-scrollbar-thumb:vertical:active,
-::-webkit-scrollbar-thumb:horizontal:active {
-  background: rgba(0, 0, 0, 0.6);
-  border: 2px solid transparent;
-  border-radius: 20px;
-  background-clip: padding-box;
-  min-height: 10px;
+  ::-webkit-scrollbar-thumb:vertical {
+    background: rgba(0, 0, 0, 0.4);
+    border: 2px solid transparent;
+    border-radius: 20px;
+    background-clip: padding-box;
+    min-height: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:vertical:active {
+    background: rgba(0, 0, 0, 0.6);
+    border: 2px solid transparent;
+    border-radius: 20px;
+    background-clip: padding-box;
+    min-height: 10px;
+  }
+
 }
